--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             </div>
             
         </div>
+
+        <p id="generated-image-count">Nombre d'images générées : 0</p>
     </div>
 </body>
 <script src="./assets/main.js" async="async"></script>
