--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
     <script src="./assets/jquery-3.1.1.min.js"></script>
     <script src="./assets/prism.js"></script>
     <script src="./assets/fabric_with_gestures.js"></script>
+
 </head>
 
 <body>
     <div id="wrapper">
         <div id="content">
 
-           <h1>Bienvenue</h1>
-           <p id="welcome-paragraph">Bienvenue sur notre plateforme de génération d'images dédiée à la célébration de la République du Niger, marquant 64 ans d'indépendance. Ce projet, initié par Nextech Niger, est une initiative libre et accessible via notre page GitHub. L'objectif principal de cette démarche est de promouvoir la visibilité et la fierté de notre cher pays, le Niger. En mettant à disposition un outil simple et créatif, nous encourageons chacun à exprimer son attachement à cette nation riche en histoire et en diversité. Nous célébrons ainsi ensemble cet anniversaire mémorable et invitons tous les citoyens à contribuer à cette célébration numérique de notre indépendance. Rejoignez-nous dans cette aventure collective et partagez votre amour pour le Niger à travers des créations uniques et significatives.</p>
 
+        <div id="header">
+
+           <p id="welcome-paragraph">Bienvenue sur notre plateforme de génération d'images dédiée à la célébration de la République du Niger, marquant 65 ans d'indépendance.
+             Ce projet, initié par <a href="https://www.facebook.com/nextechniger">Nextech Niger</a>, est une initiative libre et accessible via notre page  <a href="https://www.gitHub.com/nextechniger">GitHub</a>. L'objectif principal de cette démarche est de promouvoir la visibilité et la fierté de notre cher pays, le Niger. En mettant à disposition un outil simple et créatif, nous encourageons chacun à exprimer son attachement à cette nation riche en histoire et en diversité. Nous célébrons ainsi ensemble cet anniversaire mémorable et invitons tous les citoyens à contribuer à cette célébration numérique de notre indépendance. Rejoignez-nous dans cette aventure collective et partagez votre amour pour le Niger à travers des créations uniques et significatives.</p>
+        </div>
            <canvas id="preview_panel">
             </canvas>
             <div class="file-input-box">
-                <label for="file-input" class="orange-button">Sélectionner une image</label>
+                <label for="file-input" class="orange-button">Charger une image</label>
                 <input id="file-input" class="file-input" type="file" name="file" onchange="onFileChange(this)">
             </div>
             <button id="download" disabled="">
@@ -37,7 +41,10 @@
             
         </div>
 
-        <p id="generated-image-count">Nombre d'images générées : 0</p>
+        <p id="generated-image-count"></p>
+
+        <img src="assets/nextech.png" class="logo"/>
+        <p>Nextech Niger</p>
 
     </div>
 </body>
@@ -47,6 +54,5 @@
         document.getElementById('generated-image-count').innerText = response.value;
     }
     </script>
-    <script async src="https://api.countapi.xyz/hit/photocollage/visits?callback=cb"></script>
 <script src="./assets/main.js" async="async"></script>
 </html>
