--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@
 
         <p id="generated-image-count"></p>
 
+        <p id="visit-count">Cette page a été visitée <span id="count">0</span> fois.</p>
+
+
         <img src="assets/nextech.png" class="logo"/>
         <p>Nextech Niger</p>
 
     </div>
+
+
 </body>
 
 <script>
